--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
 # dependencies
+Config.js
 /node_modules
 /.pnp
 .pnp.js
